--- a/JQ抽奖页面/JQ抽奖简单页面.html
+++ b/JQ抽奖页面/JQ抽奖简单页面.html
@@ -32,6 +32,12 @@
         .active {
             background-color: blue !important;
         }
+        button{
+            display: block;
+            height: 30px;
+            width: 60px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
